# backend/openapi.json
@@ -4539,6 +4539,13 @@
               "type": "string",
               "format": "date"
             }
+          },
+          {
+            "name": "source",
+            "in": "query",
+            "schema": {
+              "$ref": "#/components/schemas/DataSource"
+            }
           }
         ],
         "responses": {
